--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,33 +8,33 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btn_fotos"
+        android:id="@+id/view_photos_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="165dp"
         android:layout_marginTop="193dp"
-        android:text="Fotos"
+        android:text="@string/camera"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_bussola"
+        android:id="@+id/compass_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
         android:layout_marginTop="78dp"
-        android:text="Bússola"
+        android:text="@string/compass"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_fotos" />
+        app:layout_constraintTop_toBottomOf="@+id/view_photos_button" />
 
     <Button
-        android:id="@+id/btn_nivel"
+        android:id="@+id/level_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
         android:layout_marginTop="75dp"
-        android:text="Nível"
+        android:text="@string/level"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_bussola" />
+        app:layout_constraintTop_toBottomOf="@+id/compass_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
